# psql_update

./: .gitignore  Makefile  README.md  docker-compose.yml  go.mod  go.sum  main.go  pyproject.toml  update.go
bobmodels/: Makefile  bobgen.yaml
bobmodels/dberrors/: benchmark_accounts.bob.go
bobmodels/dbinfo/: benchmark_accounts.bob.go
bobmodels/factory/: benchmark_accounts.bob.go  bobfactory_context.bob.go  bobfactory_main.bob.go  bobfactory_main.bob_test.go  bobfactory_random.bob.go  bobfactory_random.bob_test.go
bobmodels/models/: benchmark_accounts.bob.go  bob_joins.bob.go  bob_loaders.bob.go  bob_types.bob_test.go  bob_where.bob.go
initdb/: seed_updates.sql
scripts/: benchmark_sql.py  get_aurora_password.sh  run_sql.sh
sql/: bulk_update.sql  roundtrip.sql  update_10000_each_tx.sql  update_10000_with_tx.sql  update_10000_with_tx_prepare.sql  update_10000_without_tx.sql  update_10000_without_tx_prepare.sql
src/psql_update/: __init__.py
terraform/: aurora.tf  ec2.tf  infrastructure.drawio  route53.tf  user_data.sh  variables.tf  vpc.tf
terraform/infra_images/: infrastructure_different_az.drawio  infrastructure_same_az.drawio
